# entropiaorme

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  THIRD-PARTY-NOTICES.md  launch.bat  launch.ps1
.github/workflows/: ci.yml
backend/: build_app.py  build_sidecar.spec  dependencies.py  main.py  requirements-dev.txt  requirements.txt
backend/core/: event_bus.py  events.py
backend/data/: codex_categories.py  tt_value_curve.py
backend/db/: app_database.py  base.py
backend/ocr/: capturer.py
backend/routers/: analytics.py  character.py  codex.py  demo.py  equipment.py  health.py  quests.py  scan_manual.py  settings.py  tracking.py
backend/services/: character_calc.py  chatlog_parser.py  chatlog_watcher.py  codex_service.py  config_service.py  cost_engine.py  game_data_store.py  hotbar_listener.py  local_ocr.py  mob_lookup_service.py  quest_service.py  repair_ocr.py  scan_completion.py  scan_drift.py  scan_presets.py  session_summary.py  skill_scan_core.py  skill_scan_manual.py  skill_tracker.py  spacebar_capture_listener.py  trifecta_service.py
backend/tests/: test_character_calc.py  test_chatlog_parser.py  test_chatlog_watcher.py  test_codex_formulas.py  test_codex_service.py  test_cost_engine.py  test_quests.py  test_scan_completion.py  test_skill_tracker.py  test_tracker_integration.py
backend/tracking/: loot_filter.py  models.py  (+3 more)
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: audit.toml
frontend/src-tauri/src/: lib.rs
(+114 files in other folders)
