[package]
name = "entropia-orme"
version = "0.1.0"
description = "EntropiaOrme: an analytical desktop tool for Entropia Universe."
authors = ["Mikel Williams-Lekuona <MikelWL@protonmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "entropia_orme_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging"
] }
